include/autoPrim.h

typedef unsigned short VARTYPE;
typedef struct tagSAFEARRAY SAFEARRAY;
typedef struct tagVARIANT VARIANT;
struct tagVARIANT
{
    union {
        struct __tagVARIANT
        {
            VARTYPE vt;
            WORD wReserved1;
            WORD wReserved2;
            WORD wReserved3;
            union {
                LONG lVal;
                BYTE bVal;
                SHORT iVal;
                FLOAT fltVal;
                double dblVal;
                VARIANT_BOOL boolVal;
                _VARIANT_BOOL bool;
                SCODE scode;
                CY cyVal;
                DATE date;
                BSTR bstrVal;
                IUnknown *punkVal;
                IDispatch *pdispVal;
                SAFEARRAY *parray;
                BYTE *pbVal;
                SHORT *piVal;
                LONG *plVal;
                FLOAT *pfltVal;
                double *pdblVal;
                VARIANT_BOOL *pboolVal;
                _VARIANT_BOOL *pbool;
                SCODE *pscode;
                CY *pcyVal;
                DATE *pdate;
                BSTR *pbstrVal;
                IUnknown **ppunkVal;
                IDispatch **ppdispVal;
                SAFEARRAY **pparray;
                VARIANT *pvarVal;
                PVOID byref;
                CHAR cVal;
                USHORT uiVal;
                ULONG ulVal;
                INT intVal;
                UINT uintVal;
                DECIMAL *pdecVal;
                CHAR *pcVal;
                USHORT *puiVal;
                ULONG *pulVal;
                INT *pintVal;
                UINT *puintVal;
            } n3;
        } n2;
        DECIMAL decVal;
    } n1;
};
extern HRESULT readVarVariant(VARIANT *v, VARIANT *x);
extern void writeVarVariant(VARIANT *x, VARIANT *v);
extern HRESULT readVarCurrency(VARIANT *v, int *hi, unsigned int *lo);
extern void writeVarCurrency(int hi, unsigned int lo, VARIANT *v);
extern HRESULT readVarWord64(VARIANT *v, unsigned int *hi, unsigned int *lo);
extern void writeVarWord64(unsigned int hi, unsigned int lo, VARIANT *v);
extern HRESULT readVarNull(VARIANT *v);
extern void writeVarNull(VARIANT *v);
extern void writeVarEmpty(VARIANT *v);
extern void writeVarSAFEARRAY(VARIANT *v, SAFEARRAY *sa, VARTYPE vt);
extern HRESULT readVarSAFEARRAY(VARIANT *v, SAFEARRAY **sa, VARTYPE vt);
// extern
// HRESULT
// STDCALL
// SafeArrayDestroy
//  	( /*[in]*/SAFEARRAY* psa
// 	);

extern HRESULT primCopyVARIANT(VARIANT *p1, VARIANT *p2);
extern HRESULT primVARIANTClear(VARIANT *p1);
extern HRESULT primClockToDate(/*[in]*/ int ct, /*[out]*/ double *pT);